# learn-c

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  copy_main.cpp
.github/workflows/: ci.yml  cmake.yml
include/: buffer_object.h  copy.h  copy.hpp
include/argument_parsers/: copy_argument_parser.h  copy_argument_parser.hpp
include/exceptions/: exception_base.h  io_exception.h
include/executors/: executor_base.h  multi_thread_executor.h  single_thread_executor.h
src/: copy.cpp
src/argument_parsers/: copy_argument_parser.cpp
src/exceptions/: exception_base.cpp  io_exception.cpp
src/executors/: executor_base.cpp  multi_thread_executor.cpp  single_thread_executor.cpp
tests/: benchmark_test.cpp  copy.cpp  copy_test.cpp  test_helper.cpp
tests/include/: test_helper.h
